--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint"
+		"lint": "eslint",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"dependencies": {
 		"next": "16.0.10",
 		"react": "19.2.1",
-		"react-dom": "19.2.1"
+		"react-dom": "19.2.1",
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.5.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
@@ -21,7 +25,15 @@
 		"eslint": "^9",
 		"eslint-config-next": "16.0.10",
 		"tailwindcss": "^4",
-		"typescript": "^5"
+		"typescript": "^5",
+		"storybook": "^10.1.10",
+		"@storybook/nextjs-vite": "^10.1.10",
+		"@chromatic-com/storybook": "^4.1.3",
+		"@storybook/addon-a11y": "^10.1.10",
+		"@storybook/addon-docs": "^10.1.10",
+		"@storybook/addon-onboarding": "^10.1.10",
+		"vite": "^7.3.0",
+		"eslint-plugin-storybook": "^10.1.10"
 	},
 	"volta": {
 		"node": "24.12.0"
